@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 02-08-2005 added: Movies found in Locked bookmarks are hidden from Title view until the bookmark is unlocked from Files view
  - 30-05-2005 added: WA51-presets(265).zip, now default Presetpack in Milkdrop. Contains presets 20fps > faster (tested in PAL720x576)
  - 30-05-2005 added: Milkdrop - can now select different preset packs from the settings menu. (Defaults to looking in visualisations\Milkdrop for zips and folders)
  - 30-05-2005 fixed: Milkdrop - xml settings file was getting corrupted.
